# drift-plugins

./: README.md  allowed_developers.yaml
docs/: c_chart.md  cache_persistence.md  cusum.md  design_principles.md  ewma.md  hat.md  hotelling.md  imr_chart.md  ks_test.md  mewma.md  ocdd.md  p_chart.md  plugin_architecture.md  shap.md  wasserstein.md  xbar_r_chart.md
docs/algorithms/: cusum.md  mewma.md  ocdd.md  shap.md  xbar_r_chart.md
plugins/_harness_del_test/: OWNER.yaml  pyproject.toml
plugins/_harness_del_test/drift__harness_del_test/: __init__.py
plugins/_harness_test/: pyproject.toml
plugins/_harness_test/drift__harness_test/: __init__.py
plugins/_harness_ver_test/: pyproject.toml
plugins/_harness_ver_test/drift__harness_ver_test/: __init__.py
plugins/_pdt_reg_test/: pyproject.toml
plugins/_pdt_reg_test/drift__pdt_reg_test/: __init__.py
plugins/c-chart/: OWNER.yaml  pyproject.toml
plugins/c-chart/drift_c_chart/: __init__.py  detector.py
plugins/c-chart/drift_c_chart/web/: routes.py
plugins/c_chart/: OWNER.yaml  pyproject.toml
plugins/c_chart/drift_c_chart/: __init__.py  detector.py
plugins/c_chart/drift_c_chart/web/: routes.py
plugins/c_chart/drift_c_chart/web/static/: chart.js
plugins/cusum/: OWNER.yaml  __init__.py  detector.py  pyproject.toml
plugins/cusum/drift_cusum/: __init__.py  detector.py
plugins/cusum/drift_cusum/examples/: brightness_cusum_daily.csv  cusum_example.csv
plugins/cusum/drift_cusum/web/: routes.py
plugins/cusum/drift_cusum/web/static/: chart.js
plugins/cusum/drift_cusum/web/templates/cusum/: page.html
plugins/cusum/web/templates/cusum/: page.html
plugins/ewma/: OWNER.yaml  pyproject.toml
plugins/ewma/drift_ewma/: __init__.py  detector.py
plugins/ewma/drift_ewma/web/: routes.py
plugins/ewma/drift_ewma/web/static/: chart.js
plugins/ewma/drift_ewma/web/templates/ewma/: page.html
plugins/hat/: OWNER.yaml  pyproject.toml
plugins/hat/drift_hat/: __init__.py  detector.py
plugins/hat/drift_hat/web/: routes.py
plugins/hat/drift_hat/web/static/: chart.js  style.css
plugins/hat/drift_hat/web/templates/hat/: page.html
plugins/hotelling/: OWNER.yaml  pyproject.toml
plugins/hotelling/drift-cusum/: pyproject.toml
plugins/hotelling/drift-cusum/drift_cusum/: __init__.py  detector.py
plugins/hotelling/drift-cusum/drift_cusum/web/static/: chart.js  style.css
plugins/hotelling/drift-cusum/drift_cusum/web/templates/cusum/: page.html
plugins/hotelling/drift-ks-test/drift_ks_test/: detector.py
plugins/hotelling/drift-ks-test/drift_ks_test/web/static/: style.css
plugins/hotelling/drift-ks-test/drift_ks_test/web/templates/ks_test/: page.html
plugins/hotelling/drift_hotelling/: __init__.py  detector.py
plugins/hotelling/drift_hotelling/web/: routes.py
plugins/hotelling/drift_hotelling/web/static/: chart.js  style.css
plugins/hotelling/drift_hotelling/web/templates/hotelling/: page.html
plugins/imr-chart/: OWNER.yaml  pyproject.toml
plugins/imr-chart/drift_imr_chart/: __init__.py  detector.py
plugins/imr-chart/drift_imr_chart/web/: routes.py
plugins/imr_chart/: OWNER.yaml  pyproject.toml
plugins/imr_chart/drift_imr_chart/: __init__.py  detector.py
plugins/imr_chart/drift_imr_chart/web/static/: chart.js
plugins/imr_chart/drift_imr_chart/web/templates/imr_chart/: page.html
plugins/ks-test/: OWNER.yaml  pyproject.toml
plugins/ks-test/drift_ks_test/: __init__.py  detector.py
plugins/ks-test/drift_ks_test/web/: routes.py
plugins/ks-test/drift_ks_test/web/static/: chart.js  style.css
plugins/ks-test/drift_ks_test/web/templates/ks_test/: page.html
plugins/ks_test/: OWNER.yaml
plugins/ks_test/drift_ks_test/: __init__.py
plugins/mewma/: OWNER.yaml  __init__.py  pyproject.toml
plugins/mewma/drift_mewma/: __init__.py  detector.py
plugins/mewma/drift_mewma/web/: routes.py
plugins/mewma/drift_mewma/web/static/: chart.js  style.css
plugins/mewma/drift_mewma/web/templates/mewma/: page.html
plugins/mewma/web/: routes.py
plugins/mewma/web/static/: chart.js  style.css
plugins/mewma/web/templates/mewma/: page.html
plugins/ocdd/: OWNER.yaml  pyproject.toml
plugins/ocdd/drift_ocdd/: __init__.py  detector.py
plugins/ocdd/drift_ocdd/web/: routes.py
plugins/ocdd/drift_ocdd/web/static/: chart.js  style.css
plugins/ocdd/drift_ocdd/web/templates/ocdd/: page.html
plugins/p-chart/: OWNER.yaml  pyproject.toml
plugins/p-chart/drift_p_chart/: __init__.py  detector.py
plugins/p-chart/drift_p_chart/web/: routes.py
plugins/p-chart/drift_p_chart/web/static/: chart.js  style.css
plugins/p-chart/drift_p_chart/web/templates/p_chart/: page.html
plugins/p_chart/: OWNER.yaml
plugins/p_chart/drift_p_chart/: __init__.py  detector.py
plugins/shap/: OWNER.yaml  pyproject.toml
plugins/shap/drift_shap/: __init__.py  detector.py
plugins/shap/drift_shap/web/: routes.py
plugins/shap/drift_shap/web/static/: chart.js  style.css
plugins/shap/drift_shap/web/templates/shap/: page.html
plugins/wasserstein/: OWNER.yaml  pyproject.toml
plugins/wasserstein/drift_wasserstein/: __init__.py  detector.py
plugins/wasserstein/drift_wasserstein/web/: routes.py
plugins/wasserstein/drift_wasserstein/web/static/: chart.js  style.css
plugins/wasserstein/drift_wasserstein/web/templates/wasserstein/: page.html
plugins/xbar-r-chart/: OWNER.yaml  pyproject.toml
plugins/xbar-r-chart/drift_xbar_r_chart/: __init__.py  detector.py
plugins/xbar-r-chart/drift_xbar_r_chart/web/: routes.py
plugins/xbar-r-chart/drift_xbar_r_chart/web/static/: chart.js  style.css
plugins/xbar-r-chart/drift_xbar_r_chart/web/templates/xbar_r_chart/: card.html  page.html
plugins/xbar_r_chart/: OWNER.yaml
plugins/xbar_r_chart/drift_xbar_r_chart/: __init__.py  detector.py
tests/: test_ewma_analyze.py  test_ks_wasserstein_analyze.py  test_mewma_analyze.py  test_nonwindowed_analyze.py
tool/: main.py  project_generator.py
tool/templates/: card.html.tmpl  chart.js.tmpl  detector.py.tmpl  init.py.tmpl  page.html.tmpl  pyproject.toml.tmpl  routes.py.tmpl  style.css.tmpl
(+9 files in other folders)
