[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-c-chart"
version = "1.0.0"
description = "C Chart (Count Chart) drift detection plugin for drift-framework"
requires-python = ">=3.11"
dependencies = [
    "drift-framework>=0.1,<1.0",
    "matplotlib>=3.8",
]

[project.entry-points."drift_framework.plugins"]
c_chart = "drift_c_chart:register"

[tool.setuptools.packages.find]
include = ["drift_c_chart*"]

[tool.setuptools.package-data]
drift_c_chart = [
    "web/templates/**/*",
    "web/static/**/*",
    "examples/*.csv",
]
