[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-ewma"
version = "2.0.0"
description = "EWMA control chart drift detection plugin for drift-framework"
requires-python = ">=3.11"
dependencies = [
    "drift-framework>=0.1,<1.0",
    "matplotlib>=3.8",
]

[project.entry-points."drift_framework.plugins"]
ewma = "drift_ewma:register"

[tool.setuptools.packages.find]
include = ["drift_ewma*"]

[tool.setuptools.package-data]
drift_ewma = [
    "web/templates/**/*",
    "web/static/**/*",
    "examples/*.csv",
]
