[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-hat"
version = "2.0.0"
description = "ADWIN-based adaptive windowing drift detection plugin for drift-framework"
requires-python = ">=3.11"
dependencies = [
    "drift-framework>=0.1,<1.0",
]

[project.entry-points."drift_framework.plugins"]
hat = "drift_hat:register"

[tool.setuptools.packages.find]
include = ["drift_hat*"]

[tool.setuptools.package-data]
drift_hat = [
    "web/templates/**/*",
    "web/static/**/*",
    "examples/*.csv",
]
