[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-hotelling"
version = "1.0.0"
description = " Hotelling T2 제어 차트 기반 다변량 drift 탐지"
requires-python = ">=3.11"
dependencies = [
    "drift-framework>=0.1,<1.0",
]

[project.entry-points."drift_framework.plugins"]
hotelling = "drift_hotelling:register"

[tool.setuptools.packages.find]
include = ["drift_hotelling*"]

[tool.setuptools.package-data]
drift_hotelling = [
    "web/templates/**/*",
    "web/static/**/*",
    "examples/*.csv",
]
