[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-imr-chart"
version = "1.0.0"
description = "I-MR Chart (Individual-Moving Range) drift detection plugin for drift-framework"
requires-python = ">=3.11"
dependencies = [
    "drift-framework>=0.1,<1.0",
    "matplotlib>=3.8",
]

[project.entry-points."drift_framework.plugins"]
imr_chart = "drift_imr_chart:register"

[tool.setuptools.packages.find]
include = ["drift_imr_chart*"]

[tool.setuptools.package-data]
drift_imr_chart = [
    "web/templates/**/*",
    "web/static/**/*",
    "examples/*.csv",
]
