[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-ocdd"
version = "1.0.0"
description = "One-Class Drift Detector plugin for drift-framework"
requires-python = ">=3.11"
dependencies = [
    "drift-framework>=0.1,<1.0",
    "matplotlib>=3.8",
]

[project.entry-points."drift_framework.plugins"]
ocdd = "drift_ocdd:register"

[tool.setuptools.packages.find]
include = ["drift_ocdd*"]

[tool.setuptools.package-data]
drift_ocdd = [
    "web/templates/**/*",
    "web/static/**/*",
    "examples/*.csv",
]
