[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-p-chart"
version = "2.0.0"
description = "P Chart (Proportion Chart) drift detection plugin for drift-framework"
requires-python = ">=3.11"
dependencies = [
    "drift-framework>=0.1,<1.0",
    "matplotlib>=3.8",
]

[project.entry-points."drift_framework.plugins"]
p_chart = "drift_p_chart:register"

[tool.setuptools.packages.find]
include = ["drift_p_chart*"]

[tool.setuptools.package-data]
drift_p_chart = [
    "web/templates/**/*",
    "web/static/**/*",
    "examples/*.csv",
]
