[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-shap"
version = "1.0.0"
description = "Feature importance change drift detection plugin for drift-framework"
requires-python = ">=3.11"
dependencies = [
    "drift-framework>=0.1,<1.0",
    "matplotlib>=3.8",
]

[project.entry-points."drift_framework.plugins"]
shap = "drift_shap:register"

[tool.setuptools.packages.find]
include = ["drift_shap*"]

[tool.setuptools.package-data]
drift_shap = [
    "web/templates/**/*",
    "web/static/**/*",
    "examples/*.csv",
]
